add glossary content

--- a/prizma/index.html
+++ b/prizma/index.html
@@ -57,7 +57,7 @@
         <ul class="nav__list">
           <li>
             <a class="nav__item">Accounts</a>
-            <ul class="nav__sublist">
+            <ul class="nav__sublist  nav__sublist--1">
               <li><a class="nav__subitem" href="accounts/trade-with-prizmafx.html">Trade with us</a></li>
               <li><a class="nav__subitem" href="accounts/account-types.html">Account types</a></li>
               <li><a class="nav__subitem" href="accounts/segregated-accounts.html">Segregated accounts</a></li>
@@ -66,7 +66,7 @@
           </li>
           <li>
             <a class="nav__item">Platforms</a>
-            <ul class="nav__sublist">
+            <ul class="nav__sublist  nav__sublist--2">
               <li><a class="nav__subitem" href="platforms/metatrader.html">PrizmaFX MetaTrader 4</a></li>
               <li><a class="nav__subitem" href="platforms/webtrader.html">WebTrader</a></li>
               <li><a class="nav__subitem" href="platforms/mobile.html">Trade Mobile</a></li>
@@ -74,7 +74,7 @@
           </li>
           <li>
             <a class="nav__item">Tools</a>
-            <ul class="nav__sublist">
+            <ul class="nav__sublist  nav__sublist--3">
               <li><a class="nav__subitem" href="tools/spread-and-trading-hours.html">Spread and trading</a></li>
               <li><a class="nav__subitem" href="tools/glossary.html">Glossary</a></li>
               <li><a class="nav__subitem" href="tools/forex-signals.html">Forex Signals</a></li>
@@ -89,7 +89,7 @@
   <section class="slider">
     <div class="slider__box  slider__box--1">
       <div class="slider__container">
-        <div class="slider__flex">
+        <div class="slider__flex  slider__flex--1">
           <div class="slider__text">
             <b>Innovative power tools that align with your goals</b>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet tenetur qui sapiente quos, expedita quas ad eius ex consequatur aperiam!</p>
@@ -107,7 +107,7 @@
     </div>
     <div class="slider__box  slider__box--2">
       <div class="slider__container">
-        <div class="slider__flex  slider__flex--small">
+        <div class="slider__flex  slider__flex--2">
           <div class="slider__text">
             <b>New features, easy navigation<br>Account assets on the go</b>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet tenetur qui sapiente quos, expedita quas ad eius ex consequatur aperiam!</p>
@@ -125,7 +125,7 @@
     </div>
     <div class="slider__box  slider__box--3">
       <div class="slider__container">
-        <div class="slider__flex">
+        <div class="slider__flex  slider__flex--3">
           <div class="slider__text">
             <b>Premium Trader Tools<br>Trading with added confidence</b>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet tenetur qui sapiente quos, expedita quas ad eius ex consequatur aperiam!</p>
