add content glossary

--- a/forexglobal/trading/account-comparison.html
+++ b/forexglobal/trading/account-comparison.html
@@ -104,9 +104,9 @@
     <div class="container">
       <h1 class="inner__name">Account comparison</h1>
       <div class="tab">
-        <button class="tab__button  tab__active" onclick="openTab(event, 'Bronze')">Mini Bronze</button>
-        <button class="tab__button" onclick="openTab(event, 'Silver')">Classic Silver</button>
-        <button class="tab__button" onclick="openTab(event, 'Gold')">Premium Gold</button>
+        <button class="tab__button  tab__button--bronze  tab__active" onclick="openTab(event, 'Bronze')">Mini Bronze</button>
+        <button class="tab__button  tab__button--silver" onclick="openTab(event, 'Silver')">Classic Silver</button>
+        <button class="tab__button  tab__button--gold" onclick="openTab(event, 'Gold')">Premium Gold</button>
       </div>
       <div id="Bronze" class="tab__content  tab__content--forex">
         <h3>Forex Pairs</h3>
