--- a/forexglobal/resources/glossary.html
+++ b/forexglobal/resources/glossary.html
@@ -105,26 +105,26 @@
       <h1 class="inner__name">Glossary</h1>
       <div class="glossary">
         <div class="glossary__control">
-          <button class="glossary__button" onclick="openTab(event, 'A')">A</button>
-          <button class="glossary__button" onclick="openTab(event, 'B')">B</button>
-          <button class="glossary__button" onclick="openTab(event, 'C')">C</button>
-          <button class="glossary__button" onclick="openTab(event, 'D')">D</button>
-          <button class="glossary__button" onclick="openTab(event, 'E')">E</button>
-          <button class="glossary__button" onclick="openTab(event, 'F')">F</button>
-          <button class="glossary__button" onclick="openTab(event, 'G')">G</button>
-          <button class="glossary__button" onclick="openTab(event, 'I')">I</button>
-          <button class="glossary__button" onclick="openTab(event, 'K')">K</button>
-          <button class="glossary__button" onclick="openTab(event, 'L')">L</button>
-          <button class="glossary__button" onclick="openTab(event, 'M')">M</button>
-          <button class="glossary__button" onclick="openTab(event, 'N')">N</button>
-          <button class="glossary__button" onclick="openTab(event, 'O')">O</button>
-          <button class="glossary__button" onclick="openTab(event, 'P')">P</button>
-          <button class="glossary__button" onclick="openTab(event, 'Q')">Q</button>
-          <button class="glossary__button" onclick="openTab(event, 'R')">R</button>
-          <button class="glossary__button" onclick="openTab(event, 'S')">S</button>
-          <button class="glossary__button" onclick="openTab(event, 'T')">T</button>
-          <button class="glossary__button" onclick="openTab(event, 'U')">U</button>
-          <button class="glossary__button" onclick="openTab(event, 'V')">V</button>
+          <button class="glossary__button" onclick="openGlossary(event, 'A')">A</button>
+          <button class="glossary__button" onclick="openGlossary(event, 'B')">B</button>
+          <button class="glossary__button" onclick="openGlossary(event, 'C')">C</button>
+          <button class="glossary__button" onclick="openGlossary(event, 'D')">D</button>
+          <button class="glossary__button" onclick="openGlossary(event, 'E')">E</button>
+          <button class="glossary__button" onclick="openGlossary(event, 'F')">F</button>
+          <button class="glossary__button" onclick="openGlossary(event, 'G')">G</button>
+          <button class="glossary__button" onclick="openGlossary(event, 'I')">I</button>
+          <button class="glossary__button" onclick="openGlossary(event, 'K')">K</button>
+          <button class="glossary__button" onclick="openGlossary(event, 'L')">L</button>
+          <button class="glossary__button" onclick="openGlossary(event, 'M')">M</button>
+          <button class="glossary__button" onclick="openGlossary(event, 'N')">N</button>
+          <button class="glossary__button" onclick="openGlossary(event, 'O')">O</button>
+          <button class="glossary__button" onclick="openGlossary(event, 'P')">P</button>
+          <button class="glossary__button" onclick="openGlossary(event, 'Q')">Q</button>
+          <button class="glossary__button" onclick="openGlossary(event, 'R')">R</button>
+          <button class="glossary__button" onclick="openGlossary(event, 'S')">S</button>
+          <button class="glossary__button" onclick="openGlossary(event, 'T')">T</button>
+          <button class="glossary__button" onclick="openGlossary(event, 'U')">U</button>
+          <button class="glossary__button" onclick="openGlossary(event, 'V')">V</button>
         </div>
         <article class="glossary__article" id="A">
           <button class="glossary__name">AAA</button>
