--- a/forexglobal/register/demo.html
+++ b/forexglobal/register/demo.html
@@ -398,7 +398,7 @@
         <a class="register__demo" href="../img/pdf/Demo-Account-Disclosure.pdf" target="_blank">Read Demo Disclaimer</a>
         <div class="register__flex">
           <input type="hidden">
-          <button class="register__next" type="button" name="Next Step">Register</button>
+          <button class="register__next" type="submit" name="Next Step">Register</button>
         </div>
       </form>
       <p class="register__warning">
