--- a/forexglobal/register/real/step-3.html
+++ b/forexglobal/register/real/step-3.html
@@ -125,7 +125,7 @@
         </div>
         <div class="register__flex">
           <input type="hidden">
-          <button class="register__next" type="button" name="Next Step">Next Step</button>
+          <button class="register__next" type="submit" name="Next Step">Next Step</button>
         </div>
       </form>
       <p class="register__warning">
