--- a/bb/index.html
+++ b/bb/index.html
@@ -212,6 +212,7 @@
       </div>
     </div>
     <a class="footer__skype" href="skype:live:backoffice.kiev.ua?chat"></a>
+    <a class="footer__whatsapp" href="https://api.whatsapp.com/send?phone=380631565107" target="_blank"></a>
   </footer>
   <div class="popup__overlay  popup__overlay--hide">
     <div class="popup  popup--hide">
@@ -230,7 +231,20 @@
   <!-- Skype -->
   <!-- <span class="skype-button bubble" data-contact-id="live:backoffice.kiev.ua"></span> -->
   <!-- <script src="https://swc.cdn.skype.com/sdk/v1/sdk.min.js"></script> -->
-  
+  <!-- WhatsApp -->
+  <!-- <script type="text/javascript">
+      (function () {
+          var options = {
+              whatsapp: "+380631565107", // WhatsApp number
+              call_to_action: "Message us", // Call to action
+              position: "right", // Position may be 'right' or 'left'
+          };
+          var proto = document.location.protocol, host = "whatshelp.io", url = proto + "//static." + host;
+          var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = url + '/widget-send-button/js/init.js';
+          s.onload = function () { WhWidgetSendButton.init(host, proto, options); };
+          var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);
+      })();
+  </script> -->
   <script src="js/popup.js"></script>
   <script src="js/tabs.js"></script>
 </body>
