--- a/forexglobal/index.html
+++ b/forexglobal/index.html
@@ -18,6 +18,9 @@
   <meta name="msapplication-config" content="browserconfig.xml">
   <meta name="msapplication-TileImage" content="img/favicon/mstile-144x144.png">
   <meta name="theme-color" content="#5a21ed">
+  <!-- Slick -->
+  <link rel="stylesheet" href="js/slick/slick.css"/>
+  <link rel="stylesheet" href="js/slick/slick-theme.css"/>
 </head>
 <body><link rel="mask-icon" href="favicon.svg" color="#2f358f">
   <section class="title">
@@ -109,7 +112,7 @@
       <button class="title__down"></button>
     </div>
   </section>
-  <section class="welcome">
+  <!-- <section class="welcome">
     <div class="container">
       <div class="welcome__flex">
         <img src="img/welcome-mockup.png" alt="Mockup">
@@ -117,6 +120,38 @@
           <h1 class="welcome__name">Multi-Platform Trading</h1>
           <p class="welcome__text">MT4 is a world-wide renowned application which enables you to trade Forex, Commodities and Futures. It is suitable for beginner investors, but also for more experienced ones, because it is so thorough and easy to use. It`s, very intuitive and it informs you about all the latest developments in the trading field. Overall, the MT4 is the most popular and widely used Forex trading platform.</p>
           <a class="welcome__button" href="register/real/step-1.html">Create account</a>
+        </div>
+      </div>
+    </div>
+  </section> -->
+  <section class="slider">
+    <div class="slider__box  slider__box--1">
+      <div class="slider__container">
+        <div class="slider__flex  slider__flex--1">
+          <div class="slider__text">
+            <b>Innovative power tools that align with your goals</b>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet tenetur qui sapiente quos, expedita quas ad eius ex consequatur aperiam!</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="slider__box  slider__box--2">
+      <div class="slider__container">
+        <div class="slider__flex  slider__flex--2">
+          <div class="slider__text">
+            <b>New features, easy navigation<br>Account assets on the go</b>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet tenetur qui sapiente quos, expedita quas ad eius ex consequatur aperiam!</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="slider__box  slider__box--3">
+      <div class="slider__container">
+        <div class="slider__flex  slider__flex--3">
+          <div class="slider__text">
+            <b>Premium Trader Tools<br>Trading with added confidence</b>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet tenetur qui sapiente quos, expedita quas ad eius ex consequatur aperiam!</p>
+          </div>
         </div>
       </div>
     </div>
@@ -609,6 +644,9 @@
       <p class="footer__text">The Company is also registered with: FCA in UK with reg. no. 782501; BaFin in Germany with reg. no. 1349943; CONSOB in Italy with reg. no. 4624; ACP in France with reg. no. 75980; CNMV in Spain with reg. no. 4373.</p>
     </div>
   </footer>
+  <script src="js/jquery.min.js"></script>
+  <script src="js/slick/slick.min.js"></script>
+  <script src="js/slider.js"></script>
   <script src="js/main.min.js" async></script>
 </body>
 </html>
