add new color tabs

--- a/forexglobal/trading/product-specification.html
+++ b/forexglobal/trading/product-specification.html
@@ -104,12 +104,12 @@
     <div class="container">
       <h1 class="inner__name">Product Specification</h1>
       <div class="tab">
-        <button class="tab__button  tab__active" onclick="openTab(event, 'Forex')">Forex</button>
-        <button class="tab__button" onclick="openTab(event, 'Commodities')">Commodities</button>
-        <button class="tab__button" onclick="openTab(event, 'Metals')">Metals</button>
-        <button class="tab__button" onclick="openTab(event, 'Energies')">Energies</button>
-        <button class="tab__button" onclick="openTab(event, 'Indices')">Indices</button>
-        <button class="tab__button" onclick="openTab(event, 'Equities')">Equities</button>
+        <button class="tab__button  tab__button--forex  tab__active" onclick="openTab(event, 'Forex')">Forex</button>
+        <button class="tab__button  tab__button--commodities" onclick="openTab(event, 'Commodities')">Commodities</button>
+        <button class="tab__button  tab__button--metals" onclick="openTab(event, 'Metals')">Metals</button>
+        <button class="tab__button  tab__button--energies" onclick="openTab(event, 'Energies')">Energies</button>
+        <button class="tab__button  tab__button--indices" onclick="openTab(event, 'Indices')">Indices</button>
+        <button class="tab__button  tab__button--equities" onclick="openTab(event, 'Equities')">Equities</button>
       </div>
       <div id="Forex" class="tab__content  tab__content--forex">
         <h3>Forex</h3>
