--- a/bb/index.html
+++ b/bb/index.html
@@ -198,7 +198,9 @@
         </div>
         <div class="footer__middle">
           <p>Build your Forex business with our cutting-edge technology. Be Brokers® provides you everything you need to build your brokerage from scratch in just 7 days.</p><br>
-          <p>You just need to choose your business model and do what you do best- sales and marketing. We will take care of the rest.</p>
+          <p>You just need to choose your business model and do what you do best- sales and marketing. We will take care of the rest.</p><br>
+          <p>Copyright © 2018 granit oak worldwide limited Ltd.</p>
+          <p>All rights reserved. granit oak worldwide limited is registered in Cyprus with registered address</p>
         </div>
         <div class="footer__right">
           <div class="footer__social">
@@ -207,6 +209,7 @@
             <a class="footer__tw" href="#"></a>
             <a class="footer__em" href="#"></a>
           </div>
+          <p>Leutschenbachstrasse 95 Zurich<br>Zürich CH8050<br>Switzerland</p>
           <p>Copyrigt © 2018 Be Brokers®</p>
         </div>
       </div>
