--- a/forexglobal/index.html
+++ b/forexglobal/index.html
@@ -69,7 +69,7 @@
                   <li><a href="trading/account-types.html">Account Types</a></li>
                   <li><a href="trading/account-comparison.html">Account Comparison</a></li>
                   <li><a href="trading/product-specification.html">Product Specification</a></li>
-                  <li><a href="trading/trading-specification.html">Trading Specification</a></li>
+                  <!-- <li><a href="trading/trading-specification.html">Trading Specification</a></li> -->
                   <li><a href="trading/platforms.html">Platforms</a></li>
                   <li><a href="trading/funding-and-withdrawal.html">Funding and Withdrawal</a></li>
                   <li><a href="trading/announcements.html">Announcements</a></li>
