--- a/forexglobal/trading/account-types.html
+++ b/forexglobal/trading/account-types.html
@@ -67,7 +67,7 @@
                 <li><a class="nav__active">Account Types</a></li>
                 <li><a href="account-comparison.html">Account Comparison</a></li>
                 <li><a href="product-specification.html">Product Specification</a></li>
-                <li><a href="trading-specification.html">Trading Specification</a></li>
+                <!-- <li><a href="trading-specification.html">Trading Specification</a></li> -->
                 <li><a href="platforms.html">Platforms</a></li>
                 <li><a href="funding-and-withdrawal.html">Funding and Withdrawal</a></li>
                 <li><a href="announcements.html">Announcements</a></li>
@@ -106,9 +106,9 @@
       <p class="inner__text">We present our customers with an account selection that can satisfy each trader’s needs and preferences. Our team has thought about even the smallest of details and produced different account types so you can select the one that best suits your needs. There are different accounts to choose from and each one has its benefits.</p>
       <div class="inner__flex  inner__flex--types">
         <div class="account-types__box  account-types__box--mini">
-          <h2>Mini</h2>
+          <h2>Mini Bronze</h2>
           <p>Basic Trading For Beginners</p>
-          <b>$500</b>
+          <b>$100</b>
           <hr>
           <ul>
             <li>Min First Deposit: <span>$/£/€/100</span></li>
@@ -156,7 +156,7 @@
         <div class="account-types__box  account-types__box--gold">
           <h2>Premium Gold</h2>
           <p>Advanced Trading For Serious Investors</p>
-          <b>$500</b>
+          <b>$1000</b>
           <hr>
           <ul>
             <li>Min First Deposit: <span>$/£/€/1,000</span></li>
@@ -180,7 +180,7 @@
         <div class="account-types__box  account-types__box--zulu">
           <h2>ZuluTrade</h2>
           <p>Social & Copytrading</p>
-          <b>$500</b>
+          <b>$100</b>
           <hr>
           <ul>
             <li>Min First Deposit: <span>$/£/€/100</span></li>
