--- a/forexglobal/trading/platforms/webtrader.html
+++ b/forexglobal/trading/platforms/webtrader.html
@@ -67,7 +67,7 @@
                 <li><a href="../account-types.html">Account Types</a></li>
                 <li><a href="../account-comparison.html">Account Comparison</a></li>
                 <li><a href="../product-specification.html">Product Specification</a></li>
-                <li><a href="../trading-specification.html">Trading Specification</a></li>
+                <!-- <li><a href="../trading-specification.html">Trading Specification</a></li> -->
                 <li><a href="../platforms.html">Platforms</a></li>
                 <li><a href="../funding-and-withdrawal.html">Funding and Withdrawal</a></li>
                 <li><a href="../announcements.html">Announcements</a></li>
